added 5th order runge kutta option

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 01-scripts/notes.txt
 01-scripts/SaveChir.jl
+01-scripts/SaveInitialCond.jl
+01-scripts/WindowCalcs.jl
 01-scripts/RunPrecessingSpin.jl
 02-data/post-proc/*
